--- a/VoucherManagementSystem/Views/Shared/_Layout.cshtml
+++ b/VoucherManagementSystem/Views/Shared/_Layout.cshtml
@@ -12,6 +12,22 @@
     <link href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.min.css" rel="stylesheet" />
     @await RenderSectionAsync("Styles", required: false)
     <style id="dynamic-theme-styles"></style>
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+        .container-fluid {
+            flex: 1 0 auto;
+        }
+        .footer {
+            flex-shrink: 0;
+        }
+    </style>
 </head>
 <body>
     <header>
